--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   </head>
 
   <body>
-    <header>
+    <header class="flex justify-between items-center">
       <div class="headerLogo">JH</div>
       <nav>
-        <ul class="navigation">
+        <ul class="flex justify-center items-center">
           <li>Hjem</li>
           <li>Om meg</li>
           <li>Prosjekter</li>
@@ -20,7 +20,8 @@
       </nav>
     </header>
     <main>
-      <section class="hero">
+      <!-- Slett class-navn hero fra section. Og bruk class-navn under GLOBAL i styles.css fil for å sette flex styling på section elementet. -->
+      <section class="flex justify-center align-center gap-big">
         <div class="heroText">
           <h1>Velkommen</h1>
           <p>
